comment out skills attribute method for task model and change incomplete partial to have spacing, custom css and fix spacing on skill selection

--- a/app/javascript/stylesheets/bootstrap_custom.scss
+++ b/app/javascript/stylesheets/bootstrap_custom.scss
@@ -36,3 +36,17 @@
 @import '~bootstrap/scss/_tooltip.scss';
 @import '~bootstrap/scss/_transitions.scss';
 @import '~bootstrap/scss/_utilities.scss';
+
+
+// CUSTOM CSS
+
+.check_box_thing{
+  display: block;
+  margin: 20px;
+}
+
+body {
+  // font-size: 10px;
+  background-color: beige;
+
+}
